--- a/Tarea2/Tarea_2_Ejercicio_2.ipynb
+++ b/Tarea2/Tarea_2_Ejercicio_2.ipynb
@@ -537,7 +537,7 @@
    ],
    "source": [
     "cross_validate(tree_pipeline, train_x, train_y, cv=k_fold,\n",
-    "                           scoring=['accuracy', 'precision', 'recall','roc_auc'])"
+    "                           scoring=['accuracy', 'precision', 'recall','roc_auc','f1_macro'])"
    ]
   },
   {
